use /app/local prefix

--- a/config/fail2ban.conf
+++ b/config/fail2ban.conf
@@ -30,7 +30,7 @@ loglevel = 3
 #         (e.g. /etc/logrotate.d/fail2ban on Debian systems)
 # Values: [ STDOUT | STDERR | SYSLOG | FILE ]  Default: STDERR
 #
-logtarget = /var/log/fail2ban.log
+logtarget = /app/local/var/log/fail2ban.log
 
 # Option: socket
 # Notes.: Set the socket file. This is used to communicate with the daemon. Do
@@ -38,12 +38,12 @@ logtarget = /var/log/fail2ban.log
 #         communicate with the server afterwards.
 # Values: [ FILE ]  Default: /var/run/fail2ban/fail2ban.sock
 #
-socket = /var/run/fail2ban/fail2ban.sock
+socket = /app/local/var/run/fail2ban/fail2ban.sock
 
 # Option: pidfile
 # Notes.: Set the PID file. This is used to store the process ID of the
 #         fail2ban server.
 # Values: [ FILE ]  Default: /var/run/fail2ban/fail2ban.pid
 #
-pidfile = /var/run/fail2ban/fail2ban.pid
+pidfile = /app/local/var/run/fail2ban/fail2ban.pid
 
